--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
-title: Your awesome title
-author: GitHub User
+title: Muhammads Blog
+author: Muhammad Muhibullah
 email: your-email@domain.com
+theme: minima
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  On this page you will find a collection of my works and collaborations. 
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+twitter_username: AlQaim17
+github_username:  Muhammad-Muhibullah
 
 show_excerpts: true # set to false to remove excerpts on the homepage
